...
          ),
        }}
      />
      <Tabs.Screen
        name="apps"
        options={{
          title: t("Apps"),
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="apps-outline" color={color} size={size} />
          ),
        }}
      />
      <Tabs.Screen
...
